# editor

./: HISTORY.md  justfile  pyproject.toml
src/editor/: __init__.py  buttons.py  config.py  constants.py  data_files.py  data_server.py  main.py  main_menu.py  module_caller.py  text.py  utilities.py
src/editor/forms/: frm_config.py  frm_edit_file.py  frm_main.py  frm_modal.py
src/filer/: __init__.py  buttons.py  config.py  constants.py  data_server.py  main.py  main_menu.py  module_caller.py  utilities.py
src/filer/forms/: frm_config.py  frm_edit_file.py  frm_main.py
tests/: test_version.py
tests/test_data/config/: config.toml
